tests/snapshots/lir_from_hir__lir_from_hir_transformation_for_counter.snap
---
source: tests/lir_from_hir.rs
expression: project
---
items:
  - NodeFile:
      name: counter_o
      imports: []
      input:
        node_name: counter_o
        elements:
          - identifier: res
            type: Boolean
          - identifier: tick
            type: Boolean
      state:
        node_name: counter_o
        elements:
          - Buffer:
              identifier: mem_o
              type: Integer
        step:
          node_name: counter_o
          output_type: Integer
          body:
            - Let:
                identifier: inc
                expression:
                  IfThenElse:
                    condition:
                      InputAccess:
                        identifier: tick
                    then_branch:
                      statements:
                        - ExpressionLast:
                            expression:
                              Literal:
                                literal:
                                  Integer: 1
                    else_branch:
                      statements:
                        - ExpressionLast:
                            expression:
                              Literal:
                                literal:
                                  Integer: 0
            - Let:
                identifier: o
                expression:
                  IfThenElse:
                    condition:
                      InputAccess:
                        identifier: res
                    then_branch:
                      statements:
                        - ExpressionLast:
                            expression:
                              Literal:
                                literal:
                                  Integer: 0
                    else_branch:
                      statements:
                        - ExpressionLast:
                            expression:
                              FunctionCall:
                                function:
                                  Identifier:
                                    identifier: " + "
                                arguments:
                                  - FunctionCall:
                                      function:
                                        Identifier:
                                          identifier: (_)
                                      arguments:
                                        - MemoryAccess:
                                            identifier: mem_o
                                  - Identifier:
                                      identifier: inc
          state_elements_step:
            - identifier: mem_o
              expression:
                Identifier:
                  identifier: o
          output_expression:
            Identifier:
              identifier: o
          contracts:
            requires: []
            ensures: []
            invariant: []
            assert: []
        init:
          node_name: counter_o
          state_elements_init:
            - BufferInit:
                identifier: mem_o
                initial_value:
                  Integer: 0
          postconditions: []
  - NodeFile:
      name: main_y
      imports:
        - NodeFile: counter_o
      input:
        node_name: main_y
        elements: []
      state:
        node_name: main_y
        elements:
          - Buffer:
              identifier: mem_half
              type: Boolean
          - Buffer:
              identifier: mem_x
              type: Boolean
          - CalledNode:
              identifier: counter_o_y
              node_name: counter_o
        step:
          node_name: main_y
          output_type: Integer
          body:
            - Let:
                identifier: half
                expression:
                  MemoryAccess:
                    identifier: mem_half
            - Let:
                identifier: x
                expression:
                  MemoryAccess:
                    identifier: mem_x
            - Let:
                identifier: y
                expression:
                  NodeCall:
                    node_identifier: counter_o_y
                    input_name: CounterOInput
                    input_fields:
                      - - res
                        - Identifier:
                            identifier: x
                      - - tick
                        - Identifier:
                            identifier: half
          state_elements_step:
            - identifier: mem_half
              expression:
                FunctionCall:
                  function:
                    Identifier:
                      identifier: "!"
                  arguments:
                    - Identifier:
                        identifier: half
            - identifier: mem_x
              expression:
                FunctionCall:
                  function:
                    Identifier:
                      identifier: (_)
                  arguments:
                    - FunctionCall:
                        function:
                          Identifier:
                            identifier: " > "
                        arguments:
                          - Identifier:
                              identifier: y
                          - Literal:
                              literal:
                                Integer: 35
          output_expression:
            Identifier:
              identifier: y
          contracts:
            requires: []
            ensures: []
            invariant: []
            assert: []
        init:
          node_name: main_y
          state_elements_init:
            - BufferInit:
                identifier: mem_half
                initial_value:
                  Boolean: true
            - BufferInit:
                identifier: mem_x
                initial_value:
                  Boolean: false
            - CalledNodeInit:
                identifier: counter_o_y
                node_name: counter_o
          postconditions: []

